fix subtask column rendering in dark mode

--- a/packages/ui-default/pages/record_detail.page.styl
+++ b/packages/ui-default/pages/record_detail.page.styl
@@ -1,3 +1,7 @@
+// special for subtask columns in dark mode
+html.theme--dark.page--record_detail.subtask
+  background-color: #000 !important 
+
 .page--record_detail
 
   .compiler-text
